hphp/test/slow/hhbbc/uninstantiable-enum.php.expectf
Fatal error: Undefined enum: B in %s/uninstantiable-enum.php on line 9
